added extra documentation to code blocks

--- a/GDP_analysis.ipynb
+++ b/GDP_analysis.ipynb
@@ -1,21 +1,31 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "3QbcKgqPLlyr"
       },
       "source": [
-        "# Import CSV file"
+        "# Country GDP Analysis"
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this analysis, we'll be taking a look at 5 out of 266 countries to determine a general trend in GDP."
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "g-aEI0KJT51s"
       },
       "source": [
-        "In this section, use the from \"google.colab import files\" string to create an upload button to import your CSV file. "
+        "## Dataset: Countries GDP 2012 to 2021 ([link](https://www.kaggle.com/datasets/yapwh1208/countries-gdp-2012-to-2021))"
       ]
     },
     {
@@ -235,17 +245,7 @@
       "source": [
         "# upload csv\n",
         "from google.colab import files \n",
-        "\n",
         "uploaded = files.upload()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wUvSmpUtL3lm"
-      },
-      "source": [
-        "# Import Pandas and NumPy to create a dataframe\n"
       ]
     },
     {
@@ -256,18 +256,9 @@
       },
       "outputs": [],
       "source": [
+        "# Import pandas and NumPy\n",
         "import pandas as pd\n",
         "import numpy as np"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-D2d_kbEWuki"
-      },
-      "source": [
-        "# Create the dataframe to list a table\n",
-        "\n"
       ]
     },
     {
@@ -505,17 +496,9 @@
         }
       ],
       "source": [
+        "# create data frame and table\n",
         "df = pd.read_csv('gdp.csv')\n",
         "df.head()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xkP390n8Xa6x"
-      },
-      "source": [
-        "# Drop Country Code column "
       ]
     },
     {
@@ -526,18 +509,9 @@
       },
       "outputs": [],
       "source": [
+        "# drop Country Code column\n",
         "to_drop = ['Country Code']\n",
-        "\n",
         "df.drop(to_drop, inplace=True, axis=1)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_k0UQCP_YXEz"
-      },
-      "source": [
-        "# New table with dropped Country Code column"
       ]
     },
     {
@@ -769,16 +743,8 @@
         }
       ],
       "source": [
+        "# new table without Country Code column\n",
         "df.head()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gQB6SxJ4YlQf"
-      },
-      "source": [
-        "# Create a graph to visualize the trend in GDP growth in 2012"
       ]
     },
     {
@@ -805,6 +771,7 @@
         }
       ],
       "source": [
+        "# graph for GDP growth in 2012\n",
         "data = {'Country Name': ['Afghanistan', 'Albania', 'Algeria', 'American Samoa', 'Andorra'],\n",
         "        '2012': [18171512502, 10836881664, 1.50E+11, 657587786.3, 2781915942]\n",
         "       }\n",
@@ -817,15 +784,6 @@
         "plt.ylabel('2012', fontsize=14)\n",
         "plt.grid(True)\n",
         "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5OcADjYzdkAC"
-      },
-      "source": [
-        "# Visualize GDP for the year of 2021"
       ]
     },
     {
@@ -852,6 +810,7 @@
         }
       ],
       "source": [
+        "# graph for GDP growth in 2021\n",
         "data = {'Country Name': ['Afghanistan', 'Albania', 'Algeria', 'American Samoa', 'Andorra'],\n",
         "        '2021': [17083574409, 13582023424, 1.74E+11, 648340458, 2911602777]\n",
         "       }\n",
@@ -873,15 +832,6 @@
       },
       "source": [
         "While other countries on the list experienced a growth in GDP, Afghanistan and American Samoa suffered from decreasing GDPs. Afghanistan's decrease in GDP could be due to ongoing conflict and diminishing resources, whereas American Samoa can be attributed to a decrease in exportation of goods."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4oMm0cNXidM4"
-      },
-      "source": [
-        "# Create a line graph to show the trend of GDP growth in Afghanistan"
       ]
     },
     {
@@ -908,6 +858,7 @@
         }
       ],
       "source": [
+        "# line graph to visualize decline in Afghanistan's GDP\n",
         "df = pd.DataFrame({\n",
         "   'Afghanistan': [18171512502, 19189252517, 19712072023, 19998156214, 20450177379, 20991494229, 21241130983\t, 2071999789, 21553064853, 17083574409],\n",
         "   }, index=[2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021])\n",
