updated line graph

--- a/GDP_analysis.ipynb
+++ b/GDP_analysis.ipynb
@@ -858,20 +858,11 @@
         }
       ],
       "source": [
-        "# line graph to visualize decline in Afghanistan's GDP\n",
+        "# line graph to visualize Afghanistan's GDP\n",
         "df = pd.DataFrame({\n",
         "   'Afghanistan': [18171512502, 19189252517, 19712072023, 19998156214, 20450177379, 20991494229, 21241130983\t, 2071999789, 21553064853, 17083574409],\n",
         "   }, index=[2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021])\n",
         "lines = df.plot.line()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cgUq0tqripIn"
-      },
-      "source": [
-        "We see that generally, Afghanistan's GDP was relatively stable until around 2018, where it then began to take a sharp dip. It increased again between 2019 and 2020, though it began to dip again after 2020."
       ]
     }
   ],
